# media-pipeline-rs

./: .env.example  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  justfile
apps/demo-runner/: Cargo.toml
apps/demo-runner/src/: main.rs  mock_services.rs
apps/operator-cli/: Cargo.toml
apps/operator-cli/src/: main.rs
apps/review-web/: Cargo.toml
apps/review-web/src/: main.rs
config/: local.toml  models.toml  production.toml
crates/artifact-store/: Cargo.toml
crates/artifact-store/src/: lib.rs
crates/job-queue/: Cargo.toml
crates/job-queue/src/: lib.rs
crates/media-tools/: Cargo.toml
crates/media-tools/src/: ffmpeg.rs  ffprobe.rs  lib.rs
crates/pipeline-types/: Cargo.toml
crates/pipeline-types/src/: lib.rs
crates/prompt-templates/: Cargo.toml
crates/prompt-templates/src/: lib.rs
crates/provider-router/: Cargo.toml
crates/provider-router/src/: lib.rs
crates/rlm-client/: Cargo.toml
crates/rlm-client/src/: lib.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/validator-core/: Cargo.toml
crates/validator-core/src/: lib.rs
docs/: ai_agent_instructions.md  architecture.md  artifact-schemas.md  deployment.md  provider-routing.md  validation-strategy.md
jobs/: demo-smoke.json  sample-explainer.json  sample-short-video.json
scripts/: bootstrap.sh  ffmpeg-smoke-test.sh  sample-job.sh
services/api-gateway/: Cargo.toml
services/api-gateway/src/: errors.rs  extract.rs  handlers.rs  main.rs
services/asr-validation-service/: Cargo.toml
services/asr-validation-service/src/: main.rs
services/captions-service/: Cargo.toml
services/captions-service/src/: main.rs
services/music-service/: Cargo.toml
services/music-service/src/: main.rs
services/orchestrator-service/: Cargo.toml
services/orchestrator-service/src/: dispatch.rs  main.rs  registry.rs
services/planner-service/: Cargo.toml
services/planner-service/src/: main.rs
services/preview-service/: Cargo.toml
services/preview-service/src/: main.rs
services/qa-service/: Cargo.toml
services/qa-service/src/: main.rs
services/render-service/: Cargo.toml
services/render-service/src/: main.rs
services/research-service/: Cargo.toml
services/research-service/src/: main.rs
services/script-service/: Cargo.toml
services/script-service/src/: main.rs
services/sfx-service/: Cargo.toml
services/sfx-service/src/: main.rs
services/storyboard-service/: Cargo.toml
services/storyboard-service/src/: main.rs
services/tts-service/: Cargo.toml
services/tts-service/src/: main.rs
services/visual-gen-service/: Cargo.toml
services/visual-gen-service/src/: main.rs
