[package]
name = "operator-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["env"] }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
pipeline-types = { path = "../../crates/pipeline-types", package = "pipeline-types" }
