[package]
name = "job-queue"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
pipeline-types = { path = "../pipeline-types", package = "pipeline-types" }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
