[package]
name = "api-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
pipeline-types = { path = "../../crates/pipeline-types", package = "pipeline-types" }
telemetry = { path = "../../crates/telemetry", package = "telemetry" }
artifact-store = { path = "../../crates/artifact-store", package = "artifact-store" }
job-queue = { path = "../../crates/job-queue", package = "job-queue" }

[dev-dependencies]
tower.workspace = true
reqwest.workspace = true
