[package]
name = "asr-validation-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
reqwest = { workspace = true, features = ["multipart"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
pipeline-types = { path = "../../crates/pipeline-types", package = "pipeline-types" }
telemetry = { path = "../../crates/telemetry", package = "telemetry" }
validator-core = { path = "../../crates/validator-core", package = "validator-core" }
